<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.miso.uxui.ialarmed.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_take"
        android:name="com.miso.uxui.ialarmed.ui.take.TakeFragment"
        android:label="@string/menu_take_pill"
        tools:layout="@layout/fragment_take" >
        <action
            android:id="@+id/action_nav_take_to_nav_take_confirm"
            app:destination="@id/nav_take_confirm" />
    </fragment>

    <fragment
        android:id="@+id/nav_take_confirm"
        android:name="com.miso.uxui.ialarmed.ui.take.TakeConfirmFragment"
        android:label="@string/menu_take_pill"
        tools:layout="@layout/fragment_take_confirm" >
        <action
            android:id="@+id/action_nav_take_confirm_to_takeSaveFragment"
            app:destination="@id/takeSaveFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_medicines"
        android:name="com.miso.uxui.ialarmed.ui.medicines.MedicinesFragment"
        android:label="@string/menu_medicines"
        tools:layout="@layout/fragment_medicines" />
    <fragment
        android:id="@+id/takeSaveFragment"
        android:name="com.miso.uxui.ialarmed.ui.take.TakeSaveFragment"
        android:label="@string/menu_take_pill"
        tools:layout="@layout/fragment_take_save" />
</navigation>