<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.take.TakeConfirmFragment">







    <TextView
        android:id="@+id/menu_text"
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/medicine"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:layout_marginTop="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@android:color/white"
        android:layout_marginTop="96dp"
        app:layout_constraintTop_toBottomOf="@id/menu_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/menu_text2"
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/medicine_registered"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <Button
        android:id="@+id/menu_button"
        android:layout_width="189dp"
        android:layout_height="67dp"
        android:layout_marginBottom="32dp"
        android:text="@string/goBack"
        android:textColor="@color/white"
        android:theme="@style/AppButtonTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>